[project]
name = "aq-monitor"
version = "0.0.0"
description = "This program monitors air quality as recorded by
an SDS001 module connected to a Raspberry Pi."

[build-system]
# min reqs
requires = ["setuptools", "wheel"] # PEP 508 specs

[lib]
name = "aq_monitor"
version = "0.0.0"
requires = ["py-sds011", "pandas"]